--- a/Quizos/package.json
+++ b/Quizos/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@airgap/beacon-sdk": "^4.0.4",
     "@taquito/taquito": "^17.0.0",
     "@temple-wallet/dapp": "^8.0.0",
     "@testing-library/jest-dom": "^5.16.5",
