--- a/Quizos/package.json
+++ b/Quizos/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@airgap/beacon-dapp": "^4.0.4",
+    "@taquito/beacon-wallet": "^17.0.0",
     "@taquito/taquito": "^17.0.0",
     "@temple-wallet/dapp": "^8.0.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -12,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
+    "stream": "^0.0.2",
     "stream-browserify": "^3.0.0",
     "web-vitals": "^2.1.4"
   },
