--- a/Quizos/package.json
+++ b/Quizos/package.json
@@ -12,7 +12,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^1.1.5",
     "stream-browserify": "^3.0.0",
     "web-vitals": "^2.1.4"
   },
@@ -42,6 +42,6 @@
   },
   "devDependencies": {
     "customize-cra": "^1.0.0",
-    "react-app-rewired": "^2.2.1"
+    "react-app-rewired": "^2.0.0"
   }
 }
